--- a/package.json
+++ b/package.json
@@ -10,18 +10,31 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "test": "ava"
+  },
+  "ava": {
+    "require": [
+      "babel-register"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "env"
+    ]
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
+    "ava": "^0.25.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^4.19.1",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-vue": "^4.0.0",
+    "jsdom": "^12.2.0",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0"
   }
